# python-react-scaffold

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx
client/src/components/: InfoPanel.jsx  ItemsPanel.jsx
pyapp/app/: config.py  main.py  models.py  store.py
